# Numerical-Analysis

./: README.md
Cholesky/: Makefile  main.c
Conjugate-Gradient/: Makefile  conjGradient.cpp  conjGradient.h  in  main.cpp  matrix.cpp  matrix.h
Implicit-Euler/: Makefile  euler.cpp
Linear-System-Solver/: Makefile  entrada.txt  entrada2.txt  entrada3.txt  entrada4.txt  entrada5.txt  entrada6.txt  main.cpp  matriz.cpp  matriz.h  sistema.cpp  sistema.h
Linear-System-Solver-v2/: CMakeLists.txt  linear_system_solver
Linear-System-Solver-v2/Inputs/Square/Non-Symmetric/: sample2.mtx  sample3_rhs.mtx
Linear-System-Solver-v2/include/: linear_system.h
Linear-System-Solver-v2/src/: linear_system.cxx  main.cxx
Non-Linear-Equation-Newton/: Makefile  graph.plt  main.cpp
Non-Linear-Equation-Solver/: Makefile  main.cpp
Phd/Chebyshev/: chebyshev.py
Phd/Forward-Backward-Error-Calculator/: calculator.py
Phd/Linear-System-Solver/: CMakeLists.txt  linear_system_solver  recompile_project.sh
Phd/Linear-System-Solver/Inputs/Square/Non-Symmetric/: pivoting-problem-matrix.mtx  pivoting-problem-rhs.mtx  sample1.mtx  sample1_rhs.mtx  sample3.mtx  sample_matrix_4.mtx  sample_matrix_5.mtx  sample_rhs_4.mtx  sample_rhs_5.mtx
Phd/Linear-System-Solver/Inputs/Square/Symmetric/: sample1.mtx
Phd/Linear-System-Solver/Inputs/Square/Triangular/: inferior_triangular_matrix_1.mtx
Phd/Linear-System-Solver/include/: linear_system.h
Phd/Linear-System-Solver/src/: linear_system.cxx
Phd/Poisson-Equation-1D/: CMakeLists.txt
Phd/Poisson-Equation-1D/scripts/: plot_ap.py
Phd/Poisson-Equation-1D/src/: main.cpp
Phd/Programming-Assignment-1/: Makefile  run_tests.sh
Phd/Programming-Assignment-1/include/: utils.h
Phd/Programming-Assignment-1/src/: assignment1.cxx
Phd/Programming-Assignment-2/: CMakeLists.txt  README.md  ToDo  main.c  run_valgrind.sh  solution-12.txt  test.txt
Phd/Programming-Assignment-2/linear-system-library/: linear-system-solver.c  linear-system-solver.h
Phd/Programming-Assignment-2/nonlinear-system-library/: CMakeLists.txt  nonlinear-system-solver.c  nonlinear-system-solver.h
Phd/Programming-Assignment-2/problems-library/: CMakeLists.txt  problem1.c  problem1.h  problem10.c  problem10.h  problem11.c  problem11.h  problem12.c  problem12.h  problem2.c  problem2.h  problem3.c  problem3.h  problem4.c  problem4.h  problem5.c  problem5.h  problem6.c  problem6.h  problem7.c  problem7.h  problem8.c  problem8.h  problem9.c  problem9.h
Phd/Programming-Assignment-2/solver/: CMakeLists.txt  linear-system.c  linear-system.h  nonlinear-system.c  nonlinear-system.h  problem.c  problem.h  solver.c  solver.h
Phd/Programming-Assignment-3/: ToDo  linear_system_solver  rebuild_project.sh
Phd/Programming-Assignment-3/Inputs/Heder-Matrixes/: A-4.mtx  A-6.mtx  A-8.mtx  b-10.mtx  b-4.mtx  b-6.mtx  b-8.mtx
Phd/Programming-Assignment-3/Inputs/Square/Non-Symmetric/: electric-circuit-matrix.mtx  electric-circuit-rhs.mtx  sample2_rhs.mtx  sample_matrix_6.mtx  sample_rhs_6.mtx  stechiometry-matrix.mtx  stechiometry-rhs.mtx
Phd/Programming-Assignment-3/Inputs/Square/Symmetric/: e40r0000_rhs1.mtx  sample1_rhs.mtx
Phd/Programming-Assignment-3/include/: linear_system.h
Phd/Programming-Assignment-3/scripts/: A.mtx  b.mtx  converter.py
Phd/Programming-Assignment-3/scripts/converter/: converter.py
Phd/Programming-Assignment-3/scripts/error/: error.py
Phd/Programming-Assignment-3/scripts/matrix_to_latex/: compile_me.sh  converter.cxx  matrix_latex.txt  rhs_latex.txt
Phd/Programming-Assignment-3/src/: linear_system.cxx  main.cxx
Phd/Programming-Assignment-4/: CMakeLists.txt  ToDo  clean_project.sh  main.cpp  plot_points.sh  prescribed_input_medium  prescribed_input_test  run_valgrind.sh
Phd/Programming-Assignment-4/inputs/: points_1.txt  points_2.txt
Phd/Programming-Assignment-4/scripts/: interpolate_points.txt  plot.py
Phd/Programming-Assignment-4/solver/: CMakeLists.txt  csplines.cpp  csplines.h  interpolation.cpp  interpolation.h  newton.cpp  newton.h  solver.cpp  solver.h
Phd/Programming-Assignment-5/: CMakeLists.txt  ToDo  clean_project.sh  main.c
Phd/Programming-Assignment-5/inputs/: prescribed_interval_best  snoopy_points.txt
Phd/Programming-Assignment-5/interpolation-library/: CMakeLists.txt  interpolation-solver.c  interpolation-solver.h
Phd/Programming-Assignment-5/newton-cotes-library/: CMakeLists.txt  newton-cotes-solver.c  newton-cotes-solver.h
Phd/Programming-Assignment-5/scripts/: plot.py  results-13simpson.txt  results-38simpson.txt  results-mixed.txt  results-trapezium.txt
Phd/Programming-Assignment-5/solver/: CMakeLists.txt  interpolation.c  interpolation.h  lagrange.cpp  lagrange.h  newton_cotes.c  newton_cotes.h  solver.c  solver.h
Phd/Programming-Assignment-6/: CMakeLists.txt  ToDo  clean_project.sh  main.c  plot_results.sh  run_valgrind.sh
Phd/Programming-Assignment-6/inputs/: points-problem-1.txt  points-problem-3.txt  points1-problem-2.txt  points2-problem-2.txt
Phd/Programming-Assignment-6/least-squares-library/: CMakeLists.txt  least-squares-solver.c  least-squares-solver.h
Phd/Programming-Assignment-6/linear-system-library/: CMakeLists.txt  linear-system-solver.c  linear-system-solver.h
Phd/Programming-Assignment-6/output/: solution1-problem3.txt  solution2-problem3.txt
Phd/Programming-Assignment-6/scripts/: plot_problem_1.py  plot_problem_2.py  plot_problem_3.py  solve_problem_3.py
Phd/Programming-Assignment-6/solver/: CMakeLists.txt  least-squares.c  least-squares.h  linear-system.c  linear-system.h  solver.c  solver.h
Phd/Sparse-Matrix/: CMakeLists.txt  clean_project.sh
Phd/Sparse-Matrix/inputs/Square/Sparse/: sample_1.mtx  sample_2.mtx
Phd/Sparse-Matrix/src/: main.c
Phd/Sparse-Matrix/src/config/: CMakeLists.txt  config_parser.c  config_parser.h
Phd/Sparse-Matrix/src/sparse_matrix/: CMakeLists.txt  sparse_matrix.c  sparse_matrix.h
Phd/System-ODE-Solver/: CMakeLists.txt  main.cpp  plot_solution.py
Phd/Thomas-Algorithm/: main  main.cpp
Square-Root-Finder/: Makefile  main.cpp  raiz.cpp  raiz.h
(+4 files in other folders)
