cmake_minimum_required(VERSION 3.0.1)
project(Assignment5)

IF (CMAKE_VERSION VERSION_LESS "3.1")
    IF (CMAKE_C_COMPILER_ID STREQUAL "GNU")
        SET(CMAKE_C_FLAGS "-std=gnu99 ${CMAKE_C_FLAGS}")
    ENDIF(CMAKE_C_COMPILER_ID)
ELSE()
    SET(CMAKE_C_STANDARD 99)
ENDIF()

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

ADD_SUBDIRECTORY(solver)

ADD_EXECUTABLE(Assignment5 main.c)

ADD_DEPENDENCIES(Assignment5 solver)

TARGET_LINK_LIBRARIES(Assignment5 solver dl m)

ADD_SUBDIRECTORY(interpolation-library)
ADD_SUBDIRECTORY(newton-cotes-library)
