SET(LIB_TYPE MODULE) #set the lib type

############## PROBLEM 1 ##############################
set(MODEL_FILE_CPU "problem1.c")
set(COMMON_HEADERS problem1.h)

ADD_LIBRARY(problem1 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 2 ##############################
set(MODEL_FILE_CPU "problem2.c")
set(COMMON_HEADERS problem2.h)

ADD_LIBRARY(problem2 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 3 ##############################
set(MODEL_FILE_CPU "problem3.c")
set(COMMON_HEADERS problem3.h)

ADD_LIBRARY(problem3 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 4 ##############################
set(MODEL_FILE_CPU "problem4.c")
set(COMMON_HEADERS problem4.h)

ADD_LIBRARY(problem4 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 5 ##############################
set(MODEL_FILE_CPU "problem5.c")
set(COMMON_HEADERS problem5.h)

ADD_LIBRARY(problem5 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 6 ##############################
set(MODEL_FILE_CPU "problem6.c")
set(COMMON_HEADERS problem6.h)

ADD_LIBRARY(problem6 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 7 ##############################
set(MODEL_FILE_CPU "problem7.c")
set(COMMON_HEADERS problem7.h)

ADD_LIBRARY(problem7 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 8 ##############################
set(MODEL_FILE_CPU "problem8.c")
set(COMMON_HEADERS problem8.h)

ADD_LIBRARY(problem8 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 9 ##############################
set(MODEL_FILE_CPU "problem9.c")
set(COMMON_HEADERS problem9.h)

ADD_LIBRARY(problem9 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 10 ##############################
set(MODEL_FILE_CPU "problem10.c")
set(COMMON_HEADERS problem10.h)

ADD_LIBRARY(problem10 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 11 ##############################
set(MODEL_FILE_CPU "problem11.c")
set(COMMON_HEADERS problem11.h)

ADD_LIBRARY(problem11 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################

############## PROBLEM 12 ##############################
set(MODEL_FILE_CPU "problem12.c")
set(COMMON_HEADERS problem12.h)

ADD_LIBRARY(problem12 ${LIB_TYPE} ${COMMON_HEADERS} ${MODEL_FILE_CPU})
#########################################################